--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Peta Metro</title>
+  <title>Peta Metro - View Transit Maps All Around the World!</title>
 
-  <!-- Google tag (gtag.js) -->
+  <meta name="description"
+    content="Explore transit maps of cities around the world with Peta Metro. Get detailed, high-quality maps for every metro system, and easily find your way!" />
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3KZ3LJ61Q"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
