--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     content="Explore transit maps of cities around the world with Peta Metro. Get detailed, high-quality maps for every metro system, and easily find your way!" />
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3KZ3LJ61Q"></script>
+
+  <!-- In public/index.html -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336437476198786"
+    crossorigin="anonymous"></script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
