--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3KZ3LJ61Q"></script>
 
-  <!-- In public/index.html -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336437476198786"
-    crossorigin="anonymous"></script>
+  <script src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336437476198786"
+    crossorigin="anonymous">
+    </script>
 
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -28,6 +28,7 @@
 
     gtag('config', 'G-S3KZ3LJ61Q');
   </script>
+
 </head>
 
 <body>
